Song page: Check mark when song in playlist now correctly aligned

--- a/frontend/styles/main.less
+++ b/frontend/styles/main.less
@@ -2105,7 +2105,6 @@ img {
 						display: block;
 						margin-top: -30px;
 						opacity: 0.7 !important;
-						position: absolute;
 						margin-left: 250px;
 					}
 				}
